--- a/index.html
+++ b/index.html
@@ -4,42 +4,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Студия</title>
   </head>
   <body>
     <!-- шапка сайта-->
     <header class="header">
-      <a href="index.html" class="logo" lang="en"
-        ><span class="logo-web">Web</span><span>Studio</span></a
-      >
+      <div class="container">
+        <a href="index.html" class="logo" lang="en"
+          ><span class="logo-web">Web</span><span>Studio</span></a
+        >
 
-      <nav>
-        <ul class="nav-list">
-          <li><a href="./index.html" class="nav-link current">Студия</a></li>
+        <nav>
+          <ul class="nav-list">
+            <li><a href="./index.html" class="nav-link current">Студия</a></li>
+            <li>
+              <a href="./portfolio.html" class="nav-link">Портфолио</a>
+            </li>
+            <li><a href="#" class="nav-link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="info-list">
           <li>
-            <a href="./portfolio.html" class="nav-link">Портфолио</a>
+            <a href="mailto:info@example.com" class="info-link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a href="#" class="nav-link">Контакты</a></li>
+          <li>
+            <a href="tel:+380991111111" class="info-link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-
-      <ul class="info-list">
-        <li>
-          <a href="mailto:info@example.com" class="info-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380991111111" class="info-link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <!-- основная часть сайта-->
     <main>
@@ -53,44 +60,46 @@
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
 
-      <!-- -->
-      <section>
-        <ul class="section">
-          <li>
-            <h2 class="feature">Внимание к деталям</h2>
-            <p class="feature-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h2 class="feature">Пунктуальность</h2>
-            <p class="feature-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h2 class="feature">Планирование</h2>
-            <p class="feature-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h2 class="feature">Современные технологии</h2>
-            <p class="feature-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <!-- Особенности-->
+      <section class="feature-section">
+        <div class="container">
+          <ul class="section">
+            <li>
+              <h2 class="feature">Внимание к деталям</h2>
+              <p class="feature-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h2 class="feature">Пунктуальность</h2>
+              <p class="feature-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h2 class="feature">Планирование</h2>
+              <p class="feature-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h2 class="feature">Современные технологии</h2>
+              <p class="feature-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section>
+      <section class="container">
         <h2 class="title">Чем мы занимаемся</h2>
         <ul class="img">
-          <li>
+          <li class="img-t">
             <a href=""
               ><img
                 src="./images/img-01.jpg"
@@ -99,7 +108,7 @@
             /></a>
           </li>
 
-          <li>
+          <li class="img-t">
             <a href=""
               ><img
                 src="./images/img-02.jpg"
@@ -108,7 +117,7 @@
             /></a>
           </li>
 
-          <li>
+          <li class="img-t">
             <a href=""
               ><img src="./images/img-03.jpg" width="370" alt="выбор цвета"
             /></a>
@@ -117,75 +126,84 @@
       </section>
 
       <!--наша команда-->
+
       <section class="team-info">
         <h2 class="title">Наша команда</h2>
-        <ul class="team-work">
-          <li>
-            <img
-              src="./images/img-1.jpg"
-              width="270"
-              alt="фото Игорь Демьяненко "
-            />
-            <h3 class="team-list">Игорь Демьяненко</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
+        <div class="container">
+          <ul class="team-work">
+            <li class="team-card">
+              <img
+                src="./images/img-1.jpg"
+                width="270"
+                alt="фото Игорь Демьяненко "
+              />
+              <h3 class="team-list">Игорь Демьяненко</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
 
-          <li>
-            <img src="./images/img-2.jpg" width="270" alt="фото Ольга Репина" />
-            <h3 class="team-list">Ольга Репина</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
+            <li class="team-card">
+              <img
+                src="./images/img-2.jpg"
+                width="270"
+                alt="фото Ольга Репина"
+              />
+              <h3 class="team-list">Ольга Репина</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
 
-          <li>
-            <img
-              src="./images/img-3.jpg"
-              width="270"
-              alt="фото Николай Тарасов "
-            />
-            <h3 class="team-list">Николай Тарасов</h3>
-            <p class="team-text">Marketing</p>
-          </li>
+            <li class="team-card">
+              <img
+                src="./images/img-3.jpg"
+                width="270"
+                alt="фото Николай Тарасов "
+              />
+              <h3 class="team-list">Николай Тарасов</h3>
+              <p class="team-text">Marketing</p>
+            </li>
 
-          <li>
-            <img
-              src="./images/img-4.jpg"
-              width="270"
-              alt="фото Михаил Ермаков "
-            />
-            <h3 class="team-list">Михаил Ермаков</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+            <li class="team-card">
+              <img
+                src="./images/img-4.jpg"
+                width="270"
+                alt="фото Михаил Ермаков "
+              />
+              <h3 class="team-list">Михаил Ермаков</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="#" class="logo" lang="en"
-        ><span class="logo-web">Web</span
-        ><span class="logo-footer">Studio</span></a
-      >
-      <address>
-        <ul class="footer-address list">
-          <li>
-            <a
-              class="footer-address"
-              href="https://www.google.com.ua/maps/?q=50.42672,30.53834"
-            >
-              г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="info-list">
-            <a class="footer-address-navigate" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li class="info-list">
-            <a class="footer-address-navigate" href="tel:+380991111111"
-              >+38 099 111 11 11
-            </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="#" class="logo log" lang="en"
+          ><span class="logo-web">Web</span
+          ><span class="logo-footer">Studio</span></a
+        >
+        <address class="address">
+          <ul class="footer-address list">
+            <li>
+              <a
+                class="footer-address"
+                href="https://www.google.com.ua/maps/?q=50.42672,30.53834"
+              >
+                г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="info-list link">
+              <a class="footer-address-navigate" href="mailto:info@example.com"
+                >info@example.com</a
+              >
+            </li>
+            <li class="info-list link">
+              <a class="footer-address-navigate" href="tel:+380991111111"
+                >+38 099 111 11 11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
