--- a/portfolio.html
+++ b/portfolio.html
@@ -4,42 +4,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Портфолио</title>
   </head>
   <body>
     <!-- шапка сайта-->
     <header class="header">
-      <a href="index.html" class="logo" lang="en"
-        ><span class="logo-web">Web</span>Studio</a
-      >
+      <div class="container">
+        <a href="index.html" class="logo" lang="en"
+          ><span class="logo-web">Web</span><span>Studio</span></a
+        >
 
-      <nav>
-        <ul class="nav-list">
-          <li><a href="./index.html" class="nav-link">Студия</a></li>
+        <nav>
+          <ul class="nav-list">
+            <li><a href="./index.html" class="nav-link current">Студия</a></li>
+            <li>
+              <a href="./portfolio.html" class="nav-link">Портфолио</a>
+            </li>
+            <li><a href="#" class="nav-link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="info-list">
           <li>
-            <a href="./portfolio.html" class="nav-link current">Портфолио</a>
+            <a href="mailto:info@example.com" class="info-link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a href="#" class="nav-link">Контакты</a></li>
+          <li>
+            <a href="tel:+380991111111" class="info-link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-
-      <ul class="info-list">
-        <li>
-          <a href="mailto:info@example.com" class="info-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380991111111" class="info-link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <!--Проекты портфолио-->
@@ -162,32 +169,34 @@
     </main>
 
     <footer class="footer">
-      <a href="#" class="logo" lang="en"
-        ><span class="logo-web">Web</span
-        ><span class="logo-footer">Studio</span></a
-      >
-      <address>
-        <ul class="footer-address list">
-          <li>
-            <a
-              class="footer-address"
-              href="https://www.google.com.ua/maps/?q=50.42672,30.53834"
-            >
-              г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="info-list">
-            <a class="footer-address-navigate" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li class="info-list">
-            <a class="footer-address-navigate" href="tel:+380991111111"
-              >+38 099 111 11 11
-            </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="#" class="logo log" lang="en"
+          ><span class="logo-web">Web</span
+          ><span class="logo-footer">Studio</span></a
+        >
+        <address class="address">
+          <ul class="footer-address list">
+            <li>
+              <a
+                class="footer-address"
+                href="https://www.google.com.ua/maps/?q=50.42672,30.53834"
+              >
+                г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="info-list link">
+              <a class="footer-address-navigate" href="mailto:info@example.com"
+                >info@example.com</a
+              >
+            </li>
+            <li class="info-list link">
+              <a class="footer-address-navigate" href="tel:+380991111111"
+                >+38 099 111 11 11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
