--- a/index.html
+++ b/index.html
@@ -61,31 +61,31 @@
       </section>
 
       <!-- Особенности-->
-      <section class="feature-section">
+      <section class="section">
         <div class="container">
-          <ul class="section">
-            <li>
+          <ul class="feature-section">
+            <li class="item">
               <h2 class="feature">Внимание к деталям</h2>
               <p class="feature-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h2 class="feature">Пунктуальность</h2>
               <p class="feature-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h2 class="feature">Планирование</h2>
               <p class="feature-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h2 class="feature">Современные технологии</h2>
               <p class="feature-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -126,53 +126,73 @@
       </section>
 
       <!--наша команда-->
+      <div class="container">
+        <section class="team-info">
+          <div class="section">
+            <h2 class="title">Наша команда</h2>
 
-      <section class="team-info">
-        <h2 class="title">Наша команда</h2>
-        <div class="container">
-          <ul class="team-work">
-            <li class="team-card">
-              <img
-                src="./images/img-1.jpg"
-                width="270"
-                alt="фото Игорь Демьяненко "
-              />
-              <h3 class="team-list">Игорь Демьяненко</h3>
-              <p class="team-text">Product Designer</p>
-            </li>
+            <ul class="team-work">
+              <li class="team-card">
+                <article class="team">
+                  <div class="team-thumb">
+                    <img
+                      src="./images/img-1.jpg"
+                      width="270"
+                      alt="фото Игорь Демьяненко "
+                    />
+                  </div>
+                  <div class="team-content">
+                    <h3 class="team-list">Игорь Демьяненко</h3>
+                    <p class="team-text">Product Designer</p>
+                  </div>
+                </article>
+              </li>
 
-            <li class="team-card">
-              <img
-                src="./images/img-2.jpg"
-                width="270"
-                alt="фото Ольга Репина"
-              />
-              <h3 class="team-list">Ольга Репина</h3>
-              <p class="team-text">Frontend Developer</p>
-            </li>
+              <li class="team-card">
+                <article class="team">
+                  <img
+                    src="./images/img-2.jpg"
+                    width="270"
+                    alt="фото Ольга Репина"
+                  />
+                  <div class="team-content">
+                    <h3 class="team-list">Ольга Репина</h3>
+                    <p class="team-text">Frontend Developer</p>
+                  </div>
+                </article>
+              </li>
 
-            <li class="team-card">
-              <img
-                src="./images/img-3.jpg"
-                width="270"
-                alt="фото Николай Тарасов "
-              />
-              <h3 class="team-list">Николай Тарасов</h3>
-              <p class="team-text">Marketing</p>
-            </li>
+              <li class="team-card">
+                <article class="team">
+                  <img
+                    src="./images/img-3.jpg"
+                    width="270"
+                    alt="фото Николай Тарасов "
+                  />
+                  <div class="team-content">
+                    <h3 class="team-list">Николай Тарасов</h3>
+                    <p class="team-text">Marketing</p>
+                  </div>
+                </article>
+              </li>
 
-            <li class="team-card">
-              <img
-                src="./images/img-4.jpg"
-                width="270"
-                alt="фото Михаил Ермаков "
-              />
-              <h3 class="team-list">Михаил Ермаков</h3>
-              <p class="team-text">UI Designer</p>
-            </li>
-          </ul>
-        </div>
-      </section>
+              <li class="team-card">
+                <article class="team">
+                  <img
+                    src="./images/img-4.jpg"
+                    width="270"
+                    alt="фото Михаил Ермаков "
+                  />
+                  <div class="team-content">
+                    <h3 class="team-list">Михаил Ермаков</h3>
+                    <p class="team-text">UI Designer</p>
+                  </div>
+                </article>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer class="footer">
