--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,8 @@
     </header>
 
     <!--Проекты портфолио-->
-    <main>
-      <section class="portfolio">
+    <main class="container">
+      <section class="section">
         <ul class="filter list">
           <li><button class="filter-button" type="button">Все</button></li>
           <li>
@@ -66,29 +66,41 @@
           </li>
         </ul>
 
-        <ul class="list">
+        <ul class="portfolio list">
           <li class="portfolio-item">
-            <a href="#"
-              ><img
-                src="images/project-1.jpg"
-                width="370"
-                alt="фото ноутбука с изображением сайта"
-            /></a>
-            <h2 class="portfolio-item-title">Технокряк</h2>
-            <p class="portfolio-item-text">Веб-сайт</p>
+            <article class="portfolio-card">
+              <div class="portfolio-thumb">
+                <a href="#"
+                  ><img
+                    src="images/project-1.jpg"
+                    width="370"
+                    alt="фото ноутбука с изображением сайта"
+                /></a>
+              </div>
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Технокряк</h2>
+                <p class="portfolio-item-text">Веб-сайт</p>
+              </div>
+            </article>
           </li>
 
           <li class="portfolio-item">
-            <a href="#"
-              ><img
-                src="./images/project-2.jpg"
-                width="370"
-                alt="постер с баскетболистами"
-            /></a>
-            <h2 class="portfolio-item-title">
-              Постер New Orlean vs Golden Star
-            </h2>
-            <p class="portfolio-item-text">Дизайн</p>
+            <article class="portfolio-card">
+              <div class="portfolio-thumb">
+                <a href="#"
+                  ><img
+                    src="./images/project-2.jpg"
+                    width="370"
+                    alt="постер с баскетболистами"
+                /></a>
+              </div>
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="portfolio-item-text">Дизайн</p>
+              </div>
+            </article>
           </li>
 
           <li class="portfolio-item">
