--- a/index.html
+++ b/index.html
@@ -28,21 +28,25 @@
 
         <nav>
           <ul class="nav-list">
-            <li><a href="./index.html" class="nav-link current">Студия</a></li>
-            <li>
+            <li class="nav-list-li">
+              <a href="./index.html" class="nav-link current">Студия</a>
+            </li>
+            <li class="nav-list-li">
               <a href="./portfolio.html" class="nav-link">Портфолио</a>
             </li>
-            <li><a href="#" class="nav-link">Контакты</a></li>
+            <li class="nav-list-li">
+              <a href="#" class="nav-link">Контакты</a>
+            </li>
           </ul>
         </nav>
 
         <ul class="info-list">
-          <li>
+          <li class="info-list-li">
             <a href="mailto:info@example.com" class="info-link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="info-list-li">
             <a href="tel:+380991111111" class="info-link">+38 096 111 11 11</a>
           </li>
         </ul>
