--- a/portfolio.html
+++ b/portfolio.html
@@ -28,21 +28,25 @@
 
         <nav>
           <ul class="nav-list">
-            <li><a href="./index.html" class="nav-link current">Студия</a></li>
-            <li>
-              <a href="./portfolio.html" class="nav-link">Портфолио</a>
+            <li class="nav-list-li">
+              <a href="./index.html" class="nav-link">Студия</a>
             </li>
-            <li><a href="#" class="nav-link">Контакты</a></li>
+            <li class="nav-list-li">
+              <a href="./portfolio.html" class="nav-link current">Портфолио</a>
+            </li>
+            <li class="nav-list-li">
+              <a href="#" class="nav-link">Контакты</a>
+            </li>
           </ul>
         </nav>
 
         <ul class="info-list">
-          <li>
+          <li class="info-list-li">
             <a href="mailto:info@example.com" class="info-link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="info-list-li">
             <a href="tel:+380991111111" class="info-link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -53,15 +57,19 @@
     <main class="container">
       <section class="section">
         <ul class="filter list">
-          <li><button class="filter-button" type="button">Все</button></li>
-          <li>
+          <li class="filter-button-li">
+            <button class="filter-button" type="button">Все</button>
+          </li>
+          <li class="filter-button-li">
             <button class="filter-button" type="button">Веб-сайты</button>
           </li>
-          <li>
+          <li class="filter-button-li">
             <button class="filter-button" type="button">Приложения</button>
           </li>
-          <li><button class="filter-button" type="button">Дизайн</button></li>
-          <li>
+          <li class="filter-button-li">
+            <button class="filter-button" type="button">Дизайн</button>
+          </li>
+          <li class="filter-button-li">
             <button class="filter-button" type="button">Маркетинг</button>
           </li>
         </ul>
@@ -104,77 +112,119 @@
           </li>
 
           <li class="portfolio-item">
-            <a href="#"
-              ><img
-                src="./images/project-3.jpg"
-                width="370"
-                alt="логотип ресторана "
-            /></a>
-            <h2 class="portfolio-item-title">Ресторан Seafood</h2>
-            <p class="portfolio-item-text">Приложение</p>
+            <article class="portfolio-card">
+              <div class="portfolio-thumb">
+                <a href="#"
+                  ><img
+                    src="./images/project-3.jpg"
+                    width="370"
+                    alt="логотип ресторана "
+                /></a>
+              </div>
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Ресторан Seafood</h2>
+                <p class="portfolio-item-text">Приложение</p>
+              </div>
+            </article>
           </li>
 
           <li class="portfolio-item">
-            <a href="#"
-              ><img
-                src="./images/project-4.jpg"
-                width="370"
-                alt="фото наушников "
-            /></a>
-            <h2 class="portfolio-item-title">Проект Prime</h2>
-            <p class="portfolio-item-text">Маркетинг</p>
+            <article class="portfolio-card">
+              <div class="portfolio-thumb">
+                <a href="#"
+                  ><img
+                    src="./images/project-4.jpg"
+                    width="370"
+                    alt="фото наушников "
+                /></a>
+              </div>
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Проект Prime</h2>
+                <p class="portfolio-item-text">Маркетинг</p>
+              </div>
+            </article>
           </li>
 
           <li class="portfolio-item">
-            <a href="#"
-              ><img src="./images/project-5.jpg" width="370" alt="коробки "
-            /></a>
-            <h2 class="portfolio-item-title">Проект Boxes</h2>
-            <p class="portfolio-item-text">Приложение</p>
+            <article class="portfolio-card">
+              <div class="portfolio-thumb">
+                <a href="#"
+                  ><img src="./images/project-5.jpg" width="370" alt="коробки "
+                /></a>
+              </div>
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Проект Boxes</h2>
+                <p class="portfolio-item-text">Приложение</p>
+              </div>
+            </article>
           </li>
 
           <li class="portfolio-item">
-            <a href="#"
-              ><img
-                src="./images/project-6.jpg"
-                width="370"
-                alt="фото экрана компьютера "
-            /></a>
-            <h2 class="portfolio-item-title">Inspiration has no Borders</h2>
-            <p class="portfolio-item-text">Веб-сайт</p>
+            <article class="portfolio-card">
+              <div class="portfolio-thumb">
+                <a href="#"
+                  ><img
+                    src="./images/project-6.jpg"
+                    width="370"
+                    alt="фото экрана компьютера "
+                /></a>
+              </div>
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Inspiration has no Borders</h2>
+                <p class="portfolio-item-text">Веб-сайт</p>
+              </div>
+            </article>
           </li>
 
           <li class="portfolio-item">
-            <a href="#"
-              ><img
-                src="./images/project-7.jpg"
-                width="370"
-                alt="открытый журнал "
-            /></a>
-            <h2 class="portfolio-item-title">Издание Limited Edition</h2>
-            <p class="portfolio-item-text">Дизайн</p>
+            <article class="portfolio-card">
+              <div class="portfolio-thumb">
+                <a href="#"
+                  ><img
+                    src="./images/project-7.jpg"
+                    width="370"
+                    alt="открытый журнал "
+                /></a>
+              </div>
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Издание Limited Edition</h2>
+                <p class="portfolio-item-text">Дизайн</p>
+              </div>
+            </article>
           </li>
 
           <li class="portfolio-item">
-            <a href="#"
-              ><img
-                src="./images/project-8.jpg"
-                width="370"
-                alt="фото бирки с логотипом "
-            /></a>
-            <h2 class="portfolio-item-title">Проект LAB</h2>
-            <p class="portfolio-item-text">Маркетинг</p>
+            <article class="portfolio-card">
+              <div class="portfolio-thumb">
+                <a href="#"
+                  ><img
+                    src="./images/project-8.jpg"
+                    width="370"
+                    alt="фото бирки с логотипом "
+                /></a>
+              </div>
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Проект LAB</h2>
+                <p class="portfolio-item-text">Маркетинг</p>
+              </div>
+            </article>
           </li>
 
           <li class="portfolio-item">
-            <a href="#"
-              ><img
-                src="./images/project-9.jpg"
-                width="370"
-                alt="работа на ноутбуке "
-            /></a>
-            <h2 class="portfolio-item-title">Growing Business</h2>
-            <p class="portfolio-item-text">Приложение</p>
+            <article class="portfolio-card">
+              <div class="portfolio-thumb">
+                <a href="#"
+                  ><img
+                    src="./images/project-9.jpg"
+                    width="370"
+                    alt="работа на ноутбуке "
+                /></a>
+              </div>
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Growing Business</h2>
+                <p class="portfolio-item-text">Приложение</p>
+              </div>
+            </article>
           </li>
         </ul>
       </section>
