--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- шапка сайта-->
     <header class="header">
-      <div class="container">
+      <div class="container main-nav">
         <a href="index.html" class="logo" lang="en"
           ><span class="logo-web">Web</span><span>Studio</span></a
         >
