--- a/index.html
+++ b/index.html
@@ -130,73 +130,72 @@
       </section>
 
       <!--наша команда-->
-      <div class="container">
-        <section class="team-info">
-          <div class="section">
-            <h2 class="title">Наша команда</h2>
 
-            <ul class="team-work">
-              <li class="team-card">
-                <article class="team">
-                  <div class="team-thumb">
-                    <img
-                      src="./images/img-1.jpg"
-                      width="270"
-                      alt="фото Игорь Демьяненко "
-                    />
-                  </div>
-                  <div class="team-content">
-                    <h3 class="team-list">Игорь Демьяненко</h3>
-                    <p class="team-text">Product Designer</p>
-                  </div>
-                </article>
-              </li>
+      <section class="team-info section">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
 
-              <li class="team-card">
-                <article class="team">
+          <ul class="team-work">
+            <li class="team-card">
+              <article class="team">
+                <div class="team-thumb">
                   <img
-                    src="./images/img-2.jpg"
+                    src="./images/img-1.jpg"
                     width="270"
-                    alt="фото Ольга Репина"
+                    alt="фото Игорь Демьяненко "
                   />
-                  <div class="team-content">
-                    <h3 class="team-list">Ольга Репина</h3>
-                    <p class="team-text">Frontend Developer</p>
-                  </div>
-                </article>
-              </li>
+                </div>
+                <div class="team-content">
+                  <h3 class="team-list">Игорь Демьяненко</h3>
+                  <p class="team-text">Product Designer</p>
+                </div>
+              </article>
+            </li>
 
-              <li class="team-card">
-                <article class="team">
-                  <img
-                    src="./images/img-3.jpg"
-                    width="270"
-                    alt="фото Николай Тарасов "
-                  />
-                  <div class="team-content">
-                    <h3 class="team-list">Николай Тарасов</h3>
-                    <p class="team-text">Marketing</p>
-                  </div>
-                </article>
-              </li>
+            <li class="team-card">
+              <article class="team">
+                <img
+                  src="./images/img-2.jpg"
+                  width="270"
+                  alt="фото Ольга Репина"
+                />
+                <div class="team-content">
+                  <h3 class="team-list">Ольга Репина</h3>
+                  <p class="team-text">Frontend Developer</p>
+                </div>
+              </article>
+            </li>
 
-              <li class="team-card">
-                <article class="team">
-                  <img
-                    src="./images/img-4.jpg"
-                    width="270"
-                    alt="фото Михаил Ермаков "
-                  />
-                  <div class="team-content">
-                    <h3 class="team-list">Михаил Ермаков</h3>
-                    <p class="team-text">UI Designer</p>
-                  </div>
-                </article>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+            <li class="team-card">
+              <article class="team">
+                <img
+                  src="./images/img-3.jpg"
+                  width="270"
+                  alt="фото Николай Тарасов "
+                />
+                <div class="team-content">
+                  <h3 class="team-list">Николай Тарасов</h3>
+                  <p class="team-text">Marketing</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="team-card">
+              <article class="team">
+                <img
+                  src="./images/img-4.jpg"
+                  width="270"
+                  alt="фото Михаил Ермаков "
+                />
+                <div class="team-content">
+                  <h3 class="team-list">Михаил Ермаков</h3>
+                  <p class="team-text">UI Designer</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
