--- a/index.html
+++ b/index.html
@@ -105,28 +105,26 @@
 
       <section class="container">
         <h2 class="title">Чем мы занимаемся</h2>
-        <ul class="img">
+        <ul class="title-list">
           <li>
-            <a href=""
-              ><img
+          
+              <img
                 src="./images/img-01.jpg"
                 width="370"
                 alt="робота на компьютере"
-            /></a>
+            />
           </li>
 
           <li>
-            <a href=""
-              ><img
+            <img
                 src="./images/img-02.jpg"
                 width="370"
                 alt="на фоне компьютера телефон"
-            /></a>
+            />
           </li>
 
           <li>
-            <a href=""
-              ><img src="./images/img-03.jpg" width="370" alt="выбор цвета"
+             <img src="./images/img-03.jpg" width="370" alt="выбор цвета"
             /></a>
           </li>
         </ul>
@@ -207,7 +205,7 @@
           ><span class="logo-footer">Studio</span></a
         >
         <address class="address">
-          <ul class="footer-address list">
+          <ul class="footer-address-list">
             <li>
               <a
                 class="footer-address"
