--- a/portfolio.html
+++ b/portfolio.html
@@ -54,22 +54,23 @@
     </header>
 
     <!--Проекты портфолио-->
-    <main class="container">
-      <section class="section">
+
+    <section class="section">
+      <div class="container">
         <ul class="filter list">
           <li class="filter-item">
             <button class="filter-button" type="button">Все</button>
           </li>
-          <li class="filter-item-li">
+          <li class="filter-item">
             <button class="filter-button" type="button">Веб-сайты</button>
           </li>
-          <li class="filter-item-li">
+          <li class="filter-item">
             <button class="filter-button" type="button">Приложения</button>
           </li>
-          <li class="filter-itemn-li">
+          <li class="filter-item">
             <button class="filter-button" type="button">Дизайн</button>
           </li>
-          <li class="filter-item-li">
+          <li class="filter-item">
             <button class="filter-button" type="button">Маркетинг</button>
           </li>
         </ul>
@@ -208,12 +209,12 @@
             </a>
           </li>
         </ul>
-      </section>
-    </main>
+      </div>
+    </section>
 
     <footer class="footer">
       <div class="container">
-        <a href="#" class="logo log" lang="en"
+        <a href="#" class="logo" lang="en"
           ><span class="logo-web">Web</span
           ><span class="logo-footer">Studio</span></a
         >
